Добавляет получение курса валют
